# akinator-rs

./: Cargo.toml  README.md
src/: enums.rs  error.rs  lib.rs  models.rs
tests/: test_akinator.rs
