[package]
name = "akinator-rs"
authors = ["Tom-the-Bomb"]
description = "A simple wrapper around the undocumended Akinator API"
version = "0.1.3"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tom-the-Bomb/akinator-rs"
homepage = "https://github.com/Tom-the-Bomb/akinator-rs"
keywords = [
    "akinator-rs",
    "akinator",
    "async",
    "api",
]


[dependencies]
tokio = { version = "1.20", features = ["full"] }
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
reqwest = "0.11"