[package]
name = "akinator-rs"
authors = ["Tom-the-Bomb"]
description = "A simple wrapper around the undocumented Akinator API"
version = "0.1.12"
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/akinator-rs/latest/akinator_rs/"
repository = "https://github.com/Tom-the-Bomb/akinator-rs"
homepage = "https://github.com/Tom-the-Bomb/akinator-rs"
keywords = [
    "akinator-rs",
    "akinator",
    "async",
    "game",
    "api",
]
categories = [
    "asynchronous",
    "games",
]

[dev-dependencies]
tokio = { version = "1.20", features = ["macros"] }

[dependencies]
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
